User API + API Documentation + Unit Test
